# shakers-example

./: LICENSE  README.md  Shakefile.hs  shakers-example.cabal  shakers-example.cabal.m4
